--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.html
@@ -38,12 +38,8 @@
         <mat-card-content style="text-align: left;">
             <p><strong>Fecha de solicitud:</strong> {{
                 solicitudPago.solicitudPagoRegistrarSolicitudPago[0].fechaSolicitud | date: 'dd/MM/yyyy' }} </p>
-            <p><strong>Número de radicado SAC:</strong> {{
-                solicitudPago.solicitudPagoRegistrarSolicitudPago[0].numeroRadicadoSac }} </p>
-            <p *ngIf="solicitudPagoFase.esPreconstruccion === true"><strong>Fase del contrato:</strong> Fase 1 -
-                Preconstrucción</p>
-            <p *ngIf="solicitudPagoFase.esPreconstruccion === false"><strong>Fase del contrato:</strong> Fase 2 -
-                Construcción</p>
+            <p><strong>Número de radicado SAC:</strong> {{ solicitudPago.solicitudPagoRegistrarSolicitudPago[0].numeroRadicadoSac }} </p>
+            <p *ngIf="tienePreconstruccion === true"><strong>Fase del contrato:</strong> Fase 1 - Preconstrucción<span *ngIf="tieneConstruccion === true">, Fase 2 - Construcción.</span><span *ngIf="tienePreconstruccion === true && tieneConstruccion === false">.</span></p>
         </mat-card-content>
     </mat-card>
 
@@ -132,7 +128,7 @@
         </form>
     </ng-template>
 
-    <mat-accordion *ngIf="solicitudPagoFase.esPreconstruccion === true">
+    <mat-accordion *ngIf="tienePreconstruccion === true">
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonFase">
@@ -152,7 +148,7 @@
                                             [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
                                             [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
                                             [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
-                                            (estadoSemaforo)="getSemaforoStatus( $event, 'criteriosPago' )">
+                                            (estadoSemaforo)="getSemaforoStatus( true, $event, 'criteriosPago' )">
                     </app-obs-criterio-pagos>
                 </mat-expansion-panel>
 
@@ -168,7 +164,7 @@
                                                         [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
                                                         [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
                                                         [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
-                                                        (estadoSemaforo)="getSemaforoStatus( $event, 'detalleFactura' )">
+                                                        (estadoSemaforo)="getSemaforoStatus( true, $event, 'detalleFactura' )">
                     </app-obs-detll-fact-proc-asociados>
                 </mat-expansion-panel>
 
@@ -183,40 +179,41 @@
                                             [esVerDetalle]="esVerDetalle"
                                             [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
                                             [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
-                                            (estadoSemaforo)="getSemaforoStatus( $event, 'datosFactura' )">
+                                            (estadoSemaforo)="getSemaforoStatus( true, $event, 'datosFactura' )">
                     </app-obs-datos-factura>
                 </mat-expansion-panel>
             </mat-accordion>
         </mat-expansion-panel>
     </mat-accordion>
 
-    <mat-accordion *ngIf="solicitudPagoFase.esPreconstruccion === false">
+    <mat-accordion *ngIf="tieneConstruccion === true">
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonFase">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosAcordeonesPrincipales.semaforoAcordeonConstruccion">
                     Fase 2 - Construcción
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion>
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonCriterios">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosConstruccion.semaforoAcordeonCriterios">
                             Criterios de pago incluidos en la factura
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
                     <app-obs-criterio-pagos [solicitudPago]="solicitudPago"
                                             [esVerDetalle]="esVerDetalle"
+                                            [esPreconstruccion]="false"
                                             [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
                                             [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
                                             [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
-                                            (estadoSemaforo)="getSemaforoStatus( $event, 'criteriosPago' )">
+                                            (estadoSemaforo)="getSemaforoStatus( false, $event, 'criteriosPago' )">
                     </app-obs-criterio-pagos>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="manejoAnticipoRequiere === true">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonAmortizacion">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosConstruccion.semaforoAcordeonAmortizacion">
                             Amortización del anticipo
                         </mat-panel-title>
                     </mat-expansion-panel-header>
@@ -226,44 +223,47 @@
                                             [esVerDetalle]="esVerDetalle"
                                             [amortizacionAnticipoCodigo]="registrarSolicitudPago.amortizacionAnticipoCodigo"
                                             [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
-                                            (estadoSemaforo)="getSemaforoStatus( $event, 'amortizacion' )">
+                                            (estadoSemaforo)="getSemaforoStatus( false, $event, 'amortizacion' )">
                     </app-form-amortizacion>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDetalleFacturaProyecto">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosConstruccion.semaforoAcordeonDetalleFacturaProyecto">
                             Detalle factura para proyectos asociados
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
                     <app-obs-detll-fact-proc-asociados  [solicitudPago]="solicitudPago"
                                                         [esVerDetalle]="esVerDetalle"
+                                                        [esPreconstruccion]="false"
                                                         [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
                                                         [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
                                                         [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
-                                                        (estadoSemaforo)="getSemaforoStatus( $event, 'detalleFactura' )">
+                                                        (estadoSemaforo)="getSemaforoStatus( false, $event, 'detalleFactura' )">
                     </app-obs-detll-fact-proc-asociados>
                 </mat-expansion-panel>
 
                 <mat-expansion-panel class="expansion-style sub-expansion-black">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforos.semaforoAcordeonDatosFactura">
+                        <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoSemaforosConstruccion.semaforoAcordeonDatosFactura">
                             Datos de la factura
                         </mat-panel-title>
                     </mat-expansion-panel-header>
 
                     <app-obs-datos-factura  [solicitudPago]="solicitudPago"
                                             [esVerDetalle]="esVerDetalle"
+                                            [esPreconstruccion]="false"
                                             [aprobarSolicitudPagoId]="aprobarSolicitudPagoId"
                                             [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
-                                            (estadoSemaforo)="getSemaforoStatus( $event, 'datosFactura' )">
+                                            (estadoSemaforo)="getSemaforoStatus( false, $event, 'datosFactura' )">
                     </app-obs-datos-factura>
                 </mat-expansion-panel>
             </mat-accordion>
         </mat-expansion-panel>
     </mat-accordion>
 
+    <!--
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -280,4 +280,5 @@
             </app-obs-descuentos-dir-tecnica>
         </mat-expansion-panel>
     </mat-accordion>
+    -->
 </section>
