--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -193,6 +193,7 @@
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                     [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
+                                                    [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
                                                     (semaforoObservacion)="estadoSemaforosObservaciones.observacionCriterios = $event">
                         </app-form-criterios-pago>
                     </mat-expansion-panel>
