--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
@@ -10,11 +10,7 @@
             <p><strong>Número de factura:</strong> {{ detalleForm.get( 'numeroFactura' ).value }} </p>
             <p><strong>Fecha de factura:</strong> {{ detalleForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }}
             </p>
-            <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:'
-                ':'symbol-narrow':'.0-0' }} </p>
-
-            <!--
-                Se comenta el detalle de los descuentos en los datos de la factura... Atento a cualquier novedad 'Carlos Molero'
+            <p style="margin-top: 10px;"><strong>Valor facturado: </strong> {{ valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
     
                 <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
                 <p style="margin-top: 10px;" *ngIf="detalleForm.get( 'aplicaDescuento' ).value === true"><strong>¿Aplican descuentos?: </strong> Si </p>
@@ -30,7 +26,6 @@
                   </div>
                   <p><strong>Valor a pagar después de descuentos:</strong> ${{ detalleForm.get( 'valorAPagarDespues' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                 </section>
-            -->
         </mat-card-content>
     </mat-card>
     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
