--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
@@ -280,7 +280,7 @@
                     matInput
                     maxlength="2"
                     min="1"
-                    max="31"
+                    max="29"
                     required
                     (keypress)="number($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
@@ -289,6 +289,10 @@
                     formControlName="diasPlazoEjFase2"
                     #diasPlazoEjFase2
                     readonly
+                    onkeyup="if(this.value>29) this.value = 29;"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Campo numérico igual o menor a 29 días"
+                    matTooltipClass="info-tooltip"
                   />
                 </mat-form-field>
                 <span
