--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/registrar-informacion-adicional/registrar-informacion-adicional.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/registrar-informacion-adicional/registrar-informacion-adicional.component.html
@@ -164,7 +164,7 @@
                 #plazoDias
                 type="number"
                 min="1"
-                max="99"
+                max="29"
                 maxlength="2"
                 formControlName="plazoDias"
                 name="plazoDias"
@@ -173,6 +173,10 @@
                 onKeyPress="if(this.value.length>=this.maxLength) return false;"
                 oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                 readonly
+                onkeyup="if(this.value>29) this.value = 29;"
+                [matTooltipPosition]="'above'"
+                matTooltip="Campo numérico igual o menor a 29 días"
+                matTooltipClass="info-tooltip"
               />
             </mat-form-field>
             
