--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -47,8 +47,8 @@
                       formControlName="valorAportanteProyecto" (ngModelChange)="
                         validarSaldoDisponible(
                           $event,
-                          
-                          aportante.get('nombreAportante').value
+                          aportante.get('nombreAportante').value,
+                          aportante
                         )
                       " />
                     <input type="hidden" formControlName="contratacionProyectoAportanteId" />
