--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
@@ -71,10 +71,11 @@
                     </mat-card-title>
                     <div >
                         <div *ngFor="let fuente of aportante.fuentesFinanciacion;index as ii">
-                            <p>
-                                <strong>Fuente {{ii+1}}:</strong>
-                                {{fuente.nombre}}
-                            </p>
+                            <section *ngIf="fuente.saldo_actual_de_la_fuente_al_guardar !== 0">
+                                <p>
+                                    <strong>Fuente:</strong>
+                                    {{fuente.fuente}}
+                                </p>
                             <p>
                                 <strong>Saldo actual de la fuente:</strong>
                                 {{ (fuente.saldo_actual_de_la_fuente_al_guardar !== 0 ? fuente.saldo_actual_de_la_fuente_al_guardar : fuente.saldo_actual_de_la_fuente)  | currency:'':'symbol':'3.0'}}
@@ -91,6 +92,7 @@
                                 <strong>Estado de las fuentes:</strong>
                                 {{fuente.estado_de_las_fuentes}}
                             </p>-->
+                        </section>
                         </div>
                     </div>
                 </div>
