--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
@@ -131,13 +131,20 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Componente </th>
                             <td mat-cell *matCellDef="let element"> <b>{{element.componente}}</b></td>
                         </ng-container>
-    
+
                         <ng-container matColumnDef="uso">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
                             <td mat-cell *matCellDef="let element">
                                 <div  class="supportElement" *ngFor="let el of element.uso ; let i = index">
                                         {{el.nombre}}
                                 </div>
+                            </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="fuenteFinanciacion">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente de financiación por aportante </th>
+                            <td mat-cell *matCellDef="let element">
+                                {{element.fuenteFinanciacion }}
                             </td>
                         </ng-container>
     
