--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
@@ -56,7 +56,7 @@
                 <strong>Valor después de la modificación:</strong>
                 {{detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}
             </p>
-            <p *ngIf="detailavailabilityBudget?.novedadContractual">
+            <p *ngIf="detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].plazoAdicionalMeses">
                 <strong>Plazo  de la modificación:</strong>
                 
                 {{detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].plazoAdicionalMeses}} meses /
